# python-local-package

./: .gitignore  README.md
.devcontainer/: devcontainer.json
py-common/: pyproject.toml
py-common/common/: utils.py
py-common/tests/: test_greeting.py
service/: Dockerfile  Makefile  main.py
