[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.0.1"
authors = [
  { name="Oscar Diaz", email="oscargdi22@gmail.com" },
]
description = "A small example package"
requires-python = ">=3.7"
dependencies = [
  "requests==2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
